--- a/ear.html
+++ b/ear.html
@@ -26,21 +26,25 @@
     const sheetURL = 'https://docs.google.com/spreadsheets/d/1OGSmc3Y7q_5z0CBDoyycPNs6Pt8Ldy27QEak6FaBMKM/gviz/tq?tqx=out:json';
 
     fetch(sheetURL)
-      .then(res => res.text())
-      .then(text => {
-        const json = JSON.parse(text.substring(47).slice(0, -2)); // Strip Google JSONP wrapper
-        const rows = json.table.rows;
-        const messages = rows.map(r => r.c[0]?.v).filter(Boolean);
-        const chosen = messages[Math.floor(Math.random() * messages.length)];
+  .then(res => res.text())
+  .then(text => {
+    const json = JSON.parse(text.substring(47).slice(0, -2)); // Strip Google JSONP wrapper
+    const rows = json.table.rows;
 
-        document.getElementById("message").textContent = chosen;
+    // ✅ FIX: select the second column (message), not the first (timestamp)
+    const messages = rows.map(r => r.c[1]?.v).filter(Boolean);
 
-        const voice = new SpeechSynthesisUtterance(chosen);
-        voice.rate = 0.95;
-        voice.pitch = 1.1;
-        voice.lang = 'en-US';
-        speechSynthesis.speak(voice);
-      })
+    const chosen = messages[Math.floor(Math.random() * messages.length)];
+
+    document.getElementById("message").textContent = chosen;
+
+    const voice = new SpeechSynthesisUtterance(chosen);
+    voice.rate = 0.95;
+    voice.pitch = 1.1;
+    voice.lang = 'en-US';
+    speechSynthesis.speak(voice);
+  })
+
       .catch(err => {
         document.getElementById("message").textContent = "The Oracle is silent... (Error loading messages)";
         console.error("Fetch error:", err);
