--- a/ear.html
+++ b/ear.html
@@ -30,7 +30,7 @@
   </style>
 </head>
 <body>
-  <h1>👂 The Oracle Speaks</h1>
+  <h1>The Oracle Speaks</h1>
   <p id="message">Listening to the whispers...</p>
   <button onclick="speakMessage()" id="speakBtn">🔊 Tap to hear the whisper</button>
 
