--- a/ear.html
+++ b/ear.html
@@ -4,11 +4,12 @@
   <meta charset="UTF-8">
   <title>The Oracle Speaks</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Unica+One&display=swap" rel="stylesheet">
   <style>
     body {
       background: #0d0020;
       color: #e0d9ff;
-      font-family: 'Georgia', serif;
+      font-family: 'Unica One', sans-serif;
       text-align: center;
       padding: 2em;
       overflow: hidden;
@@ -17,13 +18,46 @@
     h1 {
       font-size: 2em;
       margin-bottom: 1em;
+      letter-spacing: 1px;
+    }
+
+    #orb {
+      width: 120px;
+      height: 120px;
+      background: radial-gradient(circle at center, #cfaeff, #5e2db0);
+      margin: 1em auto;
+      border-radius: 50%;
+      box-shadow: 0 0 30px #a371ff, 0 0 60px #5e2db0 inset;
+      animation: pulse 3s ease-in-out infinite alternate;
+    }
+
+    @keyframes pulse {
+      from { box-shadow: 0 0 20px #a371ff, 0 0 40px #5e2db0 inset; }
+      to   { box-shadow: 0 0 40px #c69aff, 0 0 70px #8e44ad inset; }
+    }
+
+    #status {
+      font-size: 1.2em;
+      opacity: 0.8;
+      margin-top: 1em;
     }
 
     #message {
-      font-size: 1.4em;
+      font-size: 1.6em;
       margin-top: 2em;
       opacity: 0;
-      transition: opacity 1s ease-in;
+      display: inline-block;
+      white-space: pre-wrap;
+    }
+
+    .glitch-reveal {
+      animation: glitchIn 0.05s steps(1, end) infinite;
+    }
+
+    @keyframes glitchIn {
+      0% { text-shadow: 2px 0 #ff00ff, -2px 0 #00ffff; }
+      50% { text-shadow: -2px 0 #ff00ff, 2px 0 #00ffff; }
+      100% { text-shadow: 1px 0 #ff00ff, -1px 0 #00ffff; }
     }
 
     #revealBtn {
@@ -44,14 +78,11 @@
       from { box-shadow: 0 0 8px #8a5cff; }
       to   { box-shadow: 0 0 20px #db7cff; }
     }
-
-    .revealed {
-      opacity: 1;
-    }
   </style>
 </head>
 <body>
   <h1>👁️ The Oracle Speaks</h1>
+  <div id="orb"></div>
   <p id="status">Listening to the whispers...</p>
   <button id="revealBtn" onclick="revealMessage()">🔮 Reveal the Oracle’s message</button>
   <p id="message"></p>
@@ -60,11 +91,10 @@
     const sheetURL = 'https://docs.google.com/spreadsheets/d/1OGSmc3Y7q_5z0CBDoyycPNs6Pt8Ldy27QEak6FaBMKM/gviz/tq?tqx=out:json';
     let chosen = "";
 
-    // Fetch message
     fetch(sheetURL)
       .then(res => res.text())
       .then(text => {
-        const json = JSON.parse(text.substring(47).slice(0, -2)); // Strip Google JSONP wrapper
+        const json = JSON.parse(text.substring(47).slice(0, -2));
         const rows = json.table.rows;
         const messages = rows.map(r => r.c[1]?.v).filter(Boolean);
 
@@ -74,8 +104,7 @@
         }
 
         chosen = messages[Math.floor(Math.random() * messages.length)];
-
-        document.getElementById("status").textContent = "A message has been received.";
+        document.getElementById("status").textContent = "A whisper has arrived.";
         document.getElementById("revealBtn").style.display = "inline-block";
       })
       .catch(err => {
@@ -85,9 +114,22 @@
 
     function revealMessage() {
       const messageEl = document.getElementById("message");
-      messageEl.textContent = chosen;
-      messageEl.classList.add("revealed");
+      const btn = document.getElementById("revealBtn");
+      messageEl.textContent = "";
+      messageEl.style.opacity = 1;
 
+      let i = 0;
+      const glitch = setInterval(() => {
+        messageEl.classList.add("glitch-reveal");
+        messageEl.textContent = chosen.slice(0, i + 1);
+        i++;
+        if (i >= chosen.length) {
+          clearInterval(glitch);
+          messageEl.classList.remove("glitch-reveal");
+        }
+      }, 40);
+
+      // Optional: play a chime sound first (can add audio file later)
       const voices = speechSynthesis.getVoices();
       const options = voices.filter(v =>
         v.lang.startsWith("en") || v.lang.startsWith("en-GB") || v.lang.startsWith("en-US")
@@ -101,6 +143,9 @@
       }
 
       speechSynthesis.speak(utterance);
+
+      btn.textContent = "🔊 Hear it again";
+      btn.onclick = () => speechSynthesis.speak(utterance);
     }
   </script>
 </body>
