--- a/ear.html
+++ b/ear.html
@@ -84,8 +84,11 @@
   <h1>👁️ The Oracle Speaks</h1>
   <div id="orb"></div>
   <p id="status">Listening to the whispers...</p>
+  <div id="revealArea">
   <button id="revealBtn" onclick="revealMessage()">🔮 Reveal the Oracle’s message</button>
   <p id="message"></p>
+</div>
+
 
   <script>
     const sheetURL = 'https://docs.google.com/spreadsheets/d/1OGSmc3Y7q_5z0CBDoyycPNs6Pt8Ldy27QEak6FaBMKM/gviz/tq?tqx=out:json';
